--- a/public/html/2.html
+++ b/public/html/2.html
@@ -15,29 +15,29 @@
 
             <div class="mt-10 grid grid-cols-1 gap-10 sm:grid-cols-2 lg:grid-cols-4">
                 <div>
-                    <h3 class="text-lg font-medium text-gray-900">Los Angeles</h3>
-                    <p class="mt-2 text-base text-gray-500">
+                    <h3 class="text-lg font-medium text-gray-900" editable-element>Los Angeles</h3>
+                    <p class="mt-2 text-base text-gray-500" editable-element>
                         <span class="block">4556 Brendan Ferry</span>
                         <span class="block">Los Angeles, CA 90210</span>
                     </p>
                 </div>
                 <div>
                     <h3 class="text-lg font-medium text-gray-900" editable-element>New York</h3>
-                    <p class="mt-2 text-base text-gray-500">
+                    <p class="mt-2 text-base text-gray-500" editable-element>
                         <span class="block">886 Walter Streets</span>
                         <span class="block">New York, NY 12345</span>
                     </p>
                 </div>
                 <div>
-                    <h3 class="text-lg font-medium text-gray-900">Toronto</h3>
-                    <p class="mt-2 text-base text-gray-500">
+                    <h3 class="text-lg font-medium text-gray-900" editable-element>Toronto</h3>
+                    <p class="mt-2 text-base text-gray-500" editable-element>
                         <span class="block">7363 Cynthia Pass</span>
                         <span class="block">Toronto, ON N3Y 4H8</span>
                     </p>
                 </div>
                 <div>
-                    <h3 class="text-lg font-medium text-gray-900">London</h3>
-                    <p class="mt-2 text-base text-gray-500">
+                    <h3 class="text-lg font-medium text-gray-900" editable-element>London</h3>
+                    <p class="mt-2 text-base text-gray-500" editable-element>
                         <span class="block">114 Cobble Lane</span>
                         <span class="block">London N1 2EF</span>
                     </p>
