--- a/public/html/1.html
+++ b/public/html/1.html
@@ -1,14 +1,19 @@
-<div editable-element class="mr-4 mt-4">
-<section class="relative">
-    <div class="max-w-7xl mx-auto px-4 py-4 sm:px-6 lg:px-8">
-        <h2 id="heading-big" class="sans text-3xl font-extrabold tracking-tight sm:text-4xl" editable-element>
-            Aeriam fugiat nemo cumque</h2>
-        <div class="mt-6 sm:mt-6 lg:grid lg:grid-cols-2 lg:gap-5 lg:items-center">
-            <p id="normal-text" class="text-lg text-gray-500" editable-element>Get weekly articles in your inbox on how
+<section class="relative" render-html>
+    <div id="edit-width-code-editor" class="max-w-7xl mx-auto px-4 pb-10 sm:px-6 lg:px-8">
+
+        <h2 id="heading-big" class="text-3xl font-extrabold sm:text-4xl" editable-element>
+            Aeriam fugiat nemo cumque.</h2>
+
+        <h2 id="heading-medium" class="text-2xl font-extrabold sm:text-2xl text-blue-400 my-4" editable-element>Generate
+            unique id for this
+            header</h2>
+
+        <div class="mt-3 sm:mt-4 lg:grid lg:grid-cols-2 lg:gap-5 lg:items-center">
+            <p id="normal-text" class="text-xl text-gray-500" editable-element>Get weekly articles in your inbox on how
                 to grow your
                 business. Optio cum
                 necessitatibus dolor voluptatum provident commodi et. Qui aperiam fugiat nemo cumque.</p>
-            <form class="mt-6 flex flex-col sm:flex-row lg:mt-0 lg:justify-center">
+            <form class="mt-6 flex flex-col sm:flex-row lg:mt-0 lg:justify-end">
                 <div>
                     <label class="sr-only" editable-element for="email-address">Email address</label>
                     <input id="email-address" autocomplete="email"
@@ -29,4 +34,3 @@
         </div>
     </div>
 </section>
-</div>
