--- a/public/html/2.html
+++ b/public/html/2.html
@@ -1,7 +1,6 @@
-<div editable-element class="mr-4 mt-4">
-<section>
+<section render-html>
     <div>
-        <div class="max-w-7xl mx-auto px-4 py-4 sm:px-6 lg:px-8 flex flex-col justify-center items-center">
+        <div id="edit-width-code-editor" class="max-w-7xl mx-auto px-4 pb-10 sm:px-6 lg:px-8">
             <h2 id="heading-big" class="text-3xl font-extrabold tracking-tight sm:text-4xl" editable-element>Our
                 offices</h2>
 
@@ -15,29 +14,29 @@
 
             <div class="mt-10 grid grid-cols-1 gap-10 sm:grid-cols-2 lg:grid-cols-4">
                 <div>
-                    <h3 class="text-lg font-medium text-gray-900" editable-element>Los Angeles</h3>
-                    <p class="mt-2 text-base text-gray-500" editable-element>
+                    <h3 class="text-lg font-medium text-gray-900">Los Angeles</h3>
+                    <p class="mt-2 text-base text-gray-500">
                         <span class="block">4556 Brendan Ferry</span>
                         <span class="block">Los Angeles, CA 90210</span>
                     </p>
                 </div>
                 <div>
                     <h3 class="text-lg font-medium text-gray-900" editable-element>New York</h3>
-                    <p class="mt-2 text-base text-gray-500" editable-element>
+                    <p class="mt-2 text-base text-gray-500">
                         <span class="block">886 Walter Streets</span>
                         <span class="block">New York, NY 12345</span>
                     </p>
                 </div>
                 <div>
-                    <h3 class="text-lg font-medium text-gray-900" editable-element>Toronto</h3>
-                    <p class="mt-2 text-base text-gray-500" editable-element>
+                    <h3 class="text-lg font-medium text-gray-900">Toronto</h3>
+                    <p class="mt-2 text-base text-gray-500">
                         <span class="block">7363 Cynthia Pass</span>
                         <span class="block">Toronto, ON N3Y 4H8</span>
                     </p>
                 </div>
                 <div>
-                    <h3 class="text-lg font-medium text-gray-900" editable-element>London</h3>
-                    <p class="mt-2 text-base text-gray-500" editable-element>
+                    <h3 class="text-lg font-medium text-gray-900">London</h3>
+                    <p class="mt-2 text-base text-gray-500">
                         <span class="block">114 Cobble Lane</span>
                         <span class="block">London N1 2EF</span>
                     </p>
@@ -46,4 +45,3 @@
         </div>
     </div>
 </section>
-</div>
