--- a/public/html/3.html
+++ b/public/html/3.html
@@ -4,7 +4,7 @@
       >
         <div class="w-1/2 flex flex-col justify-start text-left gap-y-3">
           <h3 editable-element class="font-bold text-2xl text-slate-900">Company name</h3>
-          <p editable-element contenteditable="true" class="text-gray-600">
+          <p editable-element class="text-gray-600 flex flex-wrap max-w-full break-all">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc
             tincidunt nunc ac ante molestie, sit amet finibus risus
             facilisis. Suspendisse tincidunt pharetra nunc ut commodo.
@@ -13,7 +13,7 @@
             sit amet erat eget nunc mattis posuere.
           </p>
         </div>
-        <div class="w-1/2 flex flex-col justify-between text-left gap-y-3">
+        <div class="w-1/2 max-w-fit flex flex-col justify-between text-left gap-y-3">
           <h3 editable-element class="font-bold text-2xl text-slate-900">Get in touch</h3>
 
           <!-- phone, mail, address -->
@@ -25,17 +25,17 @@
           <div class="flex items-center gap-x-2">
             <svg editable-element
             class="w-5 h-5 fill-current text-gray-600" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M0 3v18h24v-18h-24zm6.623 7.929l-4.623 5.712v-9.458l4.623 3.746zm-4.141-5.929h19.035l-9.517 7.713-9.518-7.713zm5.694 7.188l3.824 3.099 3.83-3.104 5.612 6.817h-18.779l5.513-6.812zm9.208-1.264l4.616-3.741v9.348l-4.616-5.607z"/></svg>
-            <p class="text-gray-600">example@mail.com</p>
+            <p editable-element class="text-gray-600">example@mail.com</p>
           </div>
           <div class="flex items-center gap-x-2">
            <svg editable-element
            class="w-5 h-5 fill-current text-gray-600" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M12 0c-4.198 0-8 3.403-8 7.602 0 4.198 3.469 9.21 8 16.398 4.531-7.188 8-12.2 8-16.398 0-4.199-3.801-7.602-8-7.602zm0 11c-1.657 0-3-1.343-3-3s1.343-3 3-3 3 1.343 3 3-1.343 3-3 3z"/></svg>
-            <p class="text-gray-600">Street Name 123, City, Country</p>
+            <p editable-element class="text-gray-600">Street Name 123, City, Country</p>
           </div>
           <!-- social media -->
           <div editable-element id="icon-list" class="flex gap-x-1 items-center flex-wrap min-h-fit justify-start w-80">
           </div>
-           <button iconList class="text-center w-40 p-0.5 text-sm bg-gray-600 text-white rounded" id="text">Add social media icons</button>
+           <button iconList class="text-center w-40 p-0.5 text-sm bg-gray-600 hover:bg-gray-500 text-white rounded" id="text">Add social media links</button>
         </div>
       </div>
     </section>
