--- a/public/html/3.html
+++ b/public/html/3.html
@@ -30,7 +30,7 @@
           <div class="flex items-center gap-x-2">
            <svg editable-element
            class="w-5 h-5 fill-current text-gray-600" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M12 0c-4.198 0-8 3.403-8 7.602 0 4.198 3.469 9.21 8 16.398 4.531-7.188 8-12.2 8-16.398 0-4.199-3.801-7.602-8-7.602zm0 11c-1.657 0-3-1.343-3-3s1.343-3 3-3 3 1.343 3 3-1.343 3-3 3z"/></svg>
-            <p editable-element class="text-gray-600">Street Name 123, City, Country</p>
+            <p editable-element giclass="text-gray-600">Street Name 123, City, Country</p>
           </div>
           <!-- social media -->
           <div editable-element id="icon-list" class="flex gap-x-1 items-center flex-wrap min-h-fit justify-start w-80">
